public abstract class FriendlyAnimal : Animal, FriendlyAnimalInterface
{
    public abstract void Feed();
    public abstract void Pet();
}